--- a/css/ahorcado.css
+++ b/css/ahorcado.css
@@ -1,51 +1,30 @@
 @charset "UTF-8";
 
 .juego-section {
-    padding: 8rem 0;
+    padding-top: 8em;
     background: linear-gradient(to top, rgba(0, 0, 0, 0.6) 25%, rgba(255, 255, 255, 0.9) 100% );
     color: rgba(0, 0, 0, 0.6) 25%;
-  }
-  .juego-section .featured-text {
-    padding: 2rem;
-  }
-  @media (min-width: 992px) {
-    .juego-section .featured-text {
-      padding: 0 0 0 2rem;
-      border-left: 0.5rem solid #64a19d;
-    }
-  }
-  .juego-section .project-text {
-    padding: 3rem;
-    font-size: 90%;
-  }
-  @media (min-width: 992px) {
-    .juego-section .project-text {
-      padding: 5rem;
-    }
-    .juego-section .project-text hr {
-      border-color: #64a19d;
-      border-width: 0.25rem;
-      width: 30%;
-    }
-  }
-  
+}
 
 .ahorcado{
-    display: grid;
-    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    margin: 0.5em auto;
+    padding-bottom: 0.8rem;
+    padding-top: 0.8rem;
 }    
 
 .imagen{
     position: absolute;
-    scale: 33%;
+    max-width: 55%;
 }
 
 @media (min-width: 992px) {
     .imagen {
-        scale: 40%;
+        max-width: 25%;
         padding-bottom: 2em;
     }
-  }
+}
 
 .imagen:nth-child(1){
     align-self: center;
@@ -103,6 +82,13 @@
     margin-top: 50px;
 }
 
+.imagen:nth-child(9){
+    align-self: center;
+    justify-self: center;
+    grid-area: 1 / 1;
+    margin-top: 50px;
+}
+
 #img1{
     visibility: hidden;
 }
@@ -124,15 +110,16 @@
 #img7{
     visibility: hidden;
 }
+#img8{
+    visibility: hidden;
+}
 
 #texto{
     visibility: hidden;
 }
 
 .info{
-    position: static;
-    margin: 6em auto;
-	display:block;
+    margin: 8rem auto;
 }
 
 #guiones{
@@ -144,7 +131,6 @@
 #historial{
     color: chocolate!important;
 }
-
 
 #teclado {
     position: static;
@@ -162,11 +148,10 @@
 @media (min-width: 992px) {
     #teclado {
         padding-top: 1em;
-        
         margin-top: 1em;
         margin-bottom: 1em;
     }
-  }
+}
 
 #teclas>span {
     font-size: small;
@@ -193,8 +178,7 @@
         align-items: center;
         text-align: center;
     }
-  }
-
+}
 
 #teclas>span:hover{
     transform: scale(1.20);
@@ -217,9 +201,9 @@ footer{
     text-decoration: none;
     display: inline-block;
     transition: 0.8;
-    }
-    
+}
+
 .footer-group:hover{
     color: whitesmoke;
     scale: 1.2;
-    }
+}
